examples/public-private/staticweb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mywebsite
  namespace: website
spec:
  selector:
    matchLabels:
      app: mywebsite
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: mywebsite
        app: mywebsite
        version: 1.0.0
    spec:
      containers:
      - name: mywebsite
        image: nginx
        ports:
        - name: http-aaa
          protocol: TCP
          containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html
        - name: securepage
          mountPath: /usr/share/nginx/html/secure
      volumes:
      - name: index
        configMap:
          name: nginx-index-config
      - name: securepage
        configMap:
          name: nginx-securepage-config
---
apiVersion: v1
kind: Service
metadata:
  name: great
  namespace: website
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mywebsite
