examples/public-private/virtualservice.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mywebsite-vs
  namespace: website
spec:
  hosts:
  - "mywebsite.mywebsite.olibato.com"
  gateways:
    - istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mywebsite
        port:
          number: 80
---
